--- a/titanic/Titanic_Kaggle.ipynb
+++ b/titanic/Titanic_Kaggle.ipynb
@@ -10,7 +10,10 @@
     "Data from the Kaggle Titanic Competition can be found at:\n",
     "https://www.kaggle.com/c/titanic/overview\n",
     "\n",
-    "The problem is Binary classification prediction of whether or not a passenger on the \n",
+    "The Notebook with all outputs can be found at the following Repo:\n",
+    "https://github.com/BeastOrchestra/DataScience/blob/main/titanic/Titanic_Kaggle.ipynb\n",
+    "\n",
+    "The problem is Binary classification prediction of whether or not a passenger on the\n",
     "Titantic died in the disaster or not.\n",
     "\n",
     "'''"
@@ -201,7 +204,7 @@
     "SurvivingMen = dftrain[(dftrain.Sex == 'male') & (dftrain.Survived == 1)].Sex.count()\n",
     "\n",
     "print('Percent Women Survived: ', 100*SurvivingWomen/Women,'%')\n",
-    "print('Percent Men Survived: ', SurvivingMen/Men,'%')\n",
+    "print('Percent Men Survived: ', 100*SurvivingMen/Men,'%')\n",
     "\n",
     "# Remove Features with no bearing on model prediction\n",
     "dftrain = dftrain.drop(columns=['Name','Ticket'])\n",
@@ -256,6 +259,7 @@
    "source": [
     "import xgboost as xgb\n",
     "from sklearn.metrics import accuracy_score, precision_recall_fscore_support, plot_confusion_matrix\n",
+    "\n",
     "# Init classifier\n",
     "xgb_cl = xgb.XGBClassifier(max_depth=1, eval_metric='mae')\n",
     "# Fit\n",
